# bigstringaf

./: .travis.yml  CHANGES.md  META.bigstring.template  META.bigstringaf.template  README.md  bigstringaf-unix.opam  bigstringaf.opam  dune-project
.github/workflows/: test.yml
examples/: README.md  dune-project
lib/: bigstringaf.ml  bigstringaf.mli  bigstringaf_stubs.c  bigstringaf_unix.ml  bigstringaf_unix.mli  bigstringaf_unix_stubs.c  dune  jbuild  runtime.js  runtime.wat
lib/config/: discover.ml
lib/freestanding/: Makefile  dune  jbuild
lib/xen/: dune  jbuild
lib_test/: dune  jbuild  s.ml  test_bigstringaf.ml
