(library
 (name        bigstringaf)
 (public_name bigstringaf)
 (libraries   bigarray)
 (flags       (:standard -safe-string))

 (c_names     bigstringaf_stubs)
 (c_flags     (-Wall -Wextra -Wpedantic))

 (js_of_ocaml (javascript_files runtime.js))
)

(library
 (name        bigstringaf_unix)
 (public_name bigstringaf-unix)
 (libraries   bigarray)
 (flags       (:standard -safe-string))

 (c_names     bigstringaf_unix_stubs)
 (c_flags     (-Wall -Wextra -Wpedantic))

 ;(js_of_ocaml (javascript_files runtime.js)) TODO / not available ?
)
