(library
 (name bigstringaf)
 (public_name bigstringaf)
 (foreign_stubs
  (language c)
  (names bigstringaf_stubs)
  (flags
   (:standard
    (:include cflags.sexp))))
 (js_of_ocaml
  (javascript_files runtime.js))
 (wasm_of_ocaml
  (javascript_files runtime.js)
  (wasm_files runtime.wat)))

(rule
 (targets cflags.sexp)
 (action
  (run config/discover.exe)))
