(library
 (name        bigstringaf_xen)
 (public_name bigstringaf.xen)
 (optional)
 (libraries   bigarray mirage-xen-posix)
 (c_names     bigstringaf_stubs)
 (c_flags     (:include cflags.sexp)))

(rule (copy# ../bigstringaf_stubs.c bigstringaf_stubs.c))

(rule (with-stdout-to cflags.sexp (run ./cflags.sh)))
